--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.64.3",
     "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
