--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-heroicons": "^2.1.0",
     "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1",
+    "react-native-svg": "^12.3.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
     "yup": "^0.32.11"
